# flowvis

./: .gitattributes  .gitignore  Cargo.toml  README.md  flow.raw
path_lines/: Cargo.toml
path_lines/src/: color_map.rs  line_shader.wgsl  main.rs  texture_shader.wgsl
src/: arrow_shader.wgsl  color_map.rs  color_shader.wgsl  flow.rs  line_shader.wgsl  main.rs  texture_shader.wgsl
