[package]
name = "path_lines"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
winit = "0.29"
env_logger = "0.11"
log = "0.4"
wgpu = "0.19"
pollster = "0.3.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
